--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>this id my first git hub</h1>
+    <h2>i am changing something</h2>
     <form action="
     ">
     <input type="text"><br>
